Geometry nodes. Error message when Geometry input lower than 1st position #86211

Closed
opened 2021-03-02 22:50:08 +01:00 by Vyacheslav Kobozev · 12 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-02 07:40, hash: c4ef90f5a0

Short description of error
Create few inputs, move Geometry input lower than 1st position, get error on modifier.
2021-03-03_00-26-57.mp4

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-02 07:40, hash: `c4ef90f5a0` **Short description of error** Create few inputs, move Geometry input lower than 1st position, get error on modifier. [2021-03-03_00-26-57.mp4](https://archive.blender.org/developer/F9861105/2021-03-03_00-26-57.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach

#92937 was marked as duplicate of this issue

#92937 was marked as duplicate of this issue
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Falk David self-assigned this 2021-03-03 09:41:15 +01:00
Member

I can confirm this for the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-03 07:53, hash: a915e47ca1.

I can confirm this for the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-03 07:53, hash: `a915e47ca1`.
Member

Added subscribers: @HooglyBoogly, @JacquesLucke

Added subscribers: @HooglyBoogly, @JacquesLucke
Member

This isn't really a bug imo. We just defined that the first input has to be the geometry input. We could make a different choice (such as always using the first geometry input socket), but that change requires a design discussion because it might have other implications. Having the geometry always at the top makes it more predictable imo.
@HooglyBoogly do you have an opinion on this?

This isn't really a bug imo. We just defined that the first input has to be the geometry input. We could make a different choice (such as always using the first geometry input socket), but that change requires a design discussion because it might have other implications. Having the geometry always at the top makes it more predictable imo. @HooglyBoogly do you have an opinion on this?
Member

I agree that this isn't a bug since the design is working as intended. Though (if the goal is to keep the group input node as is) I think it would be good to allow the user to place the geometry input anywhere. Otherwise, the best solution might be to not reuse the group input node but rather have a new node that has the geometry socket separated from the optional inputs (so it is not listed as an input in the node panel). That would make it clear that this is not just a regular group node but it's own "geometry group input node".

I agree that this isn't a bug since the design is working as intended. Though (if the goal is to keep the group input node as is) I think it would be good to allow the user to place the geometry input anywhere. Otherwise, the best solution might be to not reuse the group input node but rather have a new node that has the geometry socket separated from the optional inputs (so it is not listed as an input in the node panel). That would make it clear that this is not just a regular group node but it's own "geometry group input node".
Member

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Member

Well, it is just a regular node group. The only thing that differentiates it from other node groups is that it is used by the geometry nodes modifier. And this modifier just expects the geometry to be the first input. I'll close this, because it's not a bug. If more design discussion is necessary, it should happen outside of a bug report.

Well, it is just a regular node group. The only thing that differentiates it from other node groups is that it is used by the geometry nodes modifier. And this modifier just expects the geometry to be the first input. I'll close this, because it's not a bug. If more design discussion is necessary, it should happen outside of a bug report.
Member

Added subscribers: @Bradley_G, @PratikPB2123

Added subscribers: @Bradley_G, @PratikPB2123

In #86211#1132540, @JacquesLucke wrote:

I wrote about design to the chat.
But.
Blender counts different input as geometry input only because it is first.
It is a bug. It is not about design, it is about logic.

User see:
object input
geometry input

Blender counts under the hood:
it is geometry input because it is 1st
and this one a geometry because it is geometry

But rule is: geometry AND 1st AND single.
Rule isn`t geometry OR 1st

> In #86211#1132540, @JacquesLucke wrote: I wrote about design to the chat. But. Blender counts different input as geometry input only because it is first. It is a bug. It is not about design, it is about logic. User see: object input geometry input Blender counts under the hood: it is geometry input because it is 1st and this one a geometry because it is geometry But rule is: geometry AND 1st AND single. Rule isn`t geometry OR 1st
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86211
No description provided.