Fix T86211: Allow geometry input in any position

The geometry group expected the first input to be a geometry input.

This patch allows the geometry input to be in any position. If there are
multiple geometry inputs, then the first one will be used to get the
geometry from the modifier.

Maniphest Tasks: T86211

Differential Revision: https://developer.blender.org/D10600